Adding localization + LandMark

--- a/webapp/view/Detail.view.xml
+++ b/webapp/view/Detail.view.xml
@@ -21,6 +21,16 @@
 		showNavButton="true"
 		class="sapUiResponsiveContentPadding"
 		navButtonPress=".onNavBack">
+		<landmarkInfo>
+		<PageAccessibleLandmarkInfo
+			rootRole="Main"
+			rootLabel="{i18n>landmarkDetailPage}"
+			contentRole="Region"
+			contentLabel="{i18n>landmarkContent}"
+			headerRole="Region"
+			headerLabel="{movies>cinemaName}"
+		/>
+		</landmarkInfo>
 		<content>
 			<FlexBox wrap="Wrap">
 				<l:VerticalLayout
