--- a/webapp/view/NotFound.view.xml
+++ b/webapp/view/NotFound.view.xml
@@ -1,10 +1,13 @@
 <mvc:View
-   controllerName="sap.ui.demo.nav.controller.NotFound"
-   xmlns="sap.m"
-   xmlns:mvc="sap.ui.core.mvc">
-   <MessagePage
-      title="{i18n>NotFound}"
-      text="{i18n>NotFound.text}"
-      description="{i18n>NotFound.description}"
-      />
+	controllerName="openSAP.movies.controller.NotFound"
+	xmlns="sap.m"
+	xmlns:mvc="sap.ui.core.mvc">
+	<MessagePage
+		title="{i18n>notFoundTitle}"
+		text="{i18n>notFoundText}"
+		icon="sap-icon://video"
+		description="{i18n>notFoundDescription}"
+		showNavButton="true"
+		navButtonPress=".onNavBack">
+	</MessagePage>
 </mvc:View>
